--- a/scripts/testnet_np/config.ini
+++ b/scripts/testnet_np/config.ini
@@ -3,17 +3,26 @@ block-log-dir = blocks
 readonly = 0
 send-whole-blocks = true
 shared-file-dir = blockchain
-shared-file-size = 8192
+shared-file-size = 1024
 http-server-address = 127.0.0.1:8888
-p2p-listen-endpoint = 0.0.0.0:9877
-p2p-server-address = localhost:9877
+p2p-listen-endpoint = 0.0.0.0:9876
+p2p-server-address = 45.55.31.114:9876
 allowed-connection = any
-p2p-peer-address = p2p-testnet1.cps.io:9876
+required-participation = true
+private-key = ["CPS6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV","5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3"]
+producer-name = initb
+producer-name = inite
+producer-name = inith
+producer-name = initk
+producer-name = initn
+producer-name = initq
+producer-name = initt
+plugin = cpsio::producer_plugin
 plugin = cpsio::chain_api_plugin
 plugin = cpsio::account_history_plugin
 plugin = cpsio::account_history_api_plugin
 plugin = cpsio::wallet_api_plugin
 plugin = cpsio::wallet_plugin
-block-interval-seconds = 2
+block-interval-seconds = 3
 pending-txn-depth-limit = 60
 sync-fetch-span = 100
