--- a/scripts/testnet_np/config.ini
+++ b/scripts/testnet_np/config.ini
@@ -6,7 +6,8 @@ shared-file-dir = blockchain
 shared-file-size = 1024
 http-server-address = 127.0.0.1:8888
 p2p-listen-endpoint = 0.0.0.0:9876
-p2p-server-address = 45.55.31.114:9876
+p2p-server-address = 127.0.0.1:9876
+p2p-peer-address = 45.55.31.114:9876
 allowed-connection = any
 required-participation = true
 private-key = ["CPS6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV","5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3"]
